Created Transitions between each fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
         <item>Irish Red Ale</item>
     </string-array>
     <!--Tutorial Strings-->
+    <string name="Yeast_Reminder">Important!: Remember to remove Yeast from fridge for 4-8 hours before brewing</string>
     <string name="nav_user_name">User Name</string>
     <string name="TutorialTitle">Beer Brewing Tutorial</string>
     <string name="Instructions"></string>
